// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageryBase should render 1`] = `
<DocumentFragment>
  <img
    class="sc-bdVaJa fFzQOG"
  />
</DocumentFragment>
`;

exports[`ImageryBase should render styles object-fit and object-position 1`] = `
<DocumentFragment>
  <img
    class="sc-bdVaJa imwDus"
  />
</DocumentFragment>
`;
